<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".activity.LoginActivity">


    <ImageView
        android:id="@+id/iv_appicon"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_gravity="center"
        android:src="@drawable/logo"/>

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_15sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/border_radius_background"/>

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:hint="@string/password"
        android:textSize="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingLeft="@dimen/_10sdp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/border_radius_background"/>

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:background="@drawable/fill_radius_background"/>

    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:text="@string/Signup"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold" />


</LinearLayout>