<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_radius_background"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp">

                <TextView
                    android:id="@+id/txt_header_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/add_points_graph"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp" />

                <ImageView
                    android:id="@+id/iv_close"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/close" />

            </RelativeLayout>

            <EditText
                android:id="@+id/ed_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:hint="@string/title"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/border_radius_background"/>

            <EditText
                android:id="@+id/ed_score1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:hint="@string/score1"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/border_radius_background"/>

            <EditText
                android:id="@+id/ed_score2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:hint="@string/score2"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_15sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/border_radius_background"/>

            <TextView
                android:id="@+id/txt_add"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_margin="@dimen/_15sdp"
                android:text="@string/add"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                android:background="@drawable/fill_radius_background"/>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>