<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_radius_background"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp">

                <TextView
                    android:id="@+id/txt_header_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/graph"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp" />

                <ImageView
                    android:id="@+id/iv_close"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/close" />

            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_edit"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_8sdp"
                    android:text="@string/edit"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    android:background="@drawable/fill_radius_background"/>

                <TextView
                    android:id="@+id/txt_delete"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_margin="@dimen/_8sdp"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    android:background="@drawable/fill_radius_background"/>


            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>